# cull

./: .gitignore  KRAVSPEC-kalender-sync.md  KRAVSPEC-mobil-live.md  OMSKRIVNING.md  README.md  designer-brief.md  hatch_build.py  pyproject.toml  uppdatera_sportevent_kategori.py
.claude/: launch.json
design/: BACKLOG-2026-07-23-ekosystem.md  BACKLOG.md  BUGG-slug-byte-ompublicering.md  C-FORSLAG.md  HANDOFF-D1-SVAR-horisont-tennis.md  HANDOFF-D1-horisont-tennis.md  HANDOFF-D10-rorligt-material.md  HANDOFF-D12-tavlingar-storskala.md  HANDOFF-D14-jobbet-ager-matcher.md  HANDOFF-D16-struktur-widget-idag.md  HANDOFF-D18-hal-i-v5-leveransen.md  HANDOFF-D2-SVAR-horisont-friidrott.md  HANDOFF-D2-horisont-friidrott.md  HANDOFF-D20-kvittens-och-toppbaren.md  HANDOFF-D21-oppna-punkter-samlade.md  HANDOFF-D22-rorligt-nedprio-och-rester.md  HANDOFF-D23-live-activity-granskad.md  HANDOFF-D24-snabbplock-masterskaps-LA-och-struken-utovarsida.md  HANDOFF-D25-tavling-i-mergade-jobblistan.md  HANDOFF-D27-v6-webapp-och-genrepublicering.md  HANDOFF-D3-SVAR-ipad-snabbplock.md  HANDOFF-D3-ipad-snabbplock.md  HANDOFF-D4-SVAR-webbpaketet.md  HANDOFF-D4-webbpaketet.md  HANDOFF-D5-SVAR-lightbox.md  HANDOFF-D5-lightbox.md  HANDOFF-D6-SVAR-lasskarm-widgets.md  HANDOFF-D6-lasskarm-widgets.md  HANDOFF-D7-SVAR-startsidans-kuratering.md  HANDOFF-D7-startsidans-kuratering.md  HANDOFF-D8-SVAR-ios-fotojobb-kalendervy.md  HANDOFF-D8-ios-fotojobb-kalendervy.md  HANDOFF-D9-SVAR-publiceringsstatus.md  HANDOFF-D9-publiceringsstatus.md  HANDOFF-lar-av-match.md  LATHUND-friidrotts-sm-2026.md  PLAN-nordea-friidrott.md  PUBLICERA-SOME-HANDOVER.md  UI-SYNK-2026-07.md  backlogg-overlamning-v2.md  (+1 more)
design/HANDOFF-D26-vardag-resa/: DPT v5 - Vardag & Resa (forslag).html  HANDOFF-D26-vardag-resa-modell.md  iOS - Idag & Widget.html  iOS - Jobb-listan (tavling).html  iOS - JobbDetalj (1b).html  iOS - Panel-optimering (JobbDetalj).html  iOS - Resekort (varianter).html  iOS - Vardag & Resa (modell).html
design/design_handoff_eventmodell_v5/: CLAUDE.md  DATAMODELL v5.md  DESIGN-BRANCH-CLAUDE.md  DPT iOS v2 - Event.dc.html  DPT iOS v2 - Fältflöde.dc.html  DPT iOS v2 - Färgsystem.dc.html  DPT iOS v2 - Jobbdetalj.dc.html  DPT iOS v2 - Kärnskärmar.dc.html  DPT iOS v2 - Signatur.dc.html  DPT iOS v2 - Widget & Låsskärm.dc.html  DPT v5 - Begrepp & Navigation.dc.html  DPT v5 - Event Import & Deltagare.dc.html  DPT v5 - Event Program.dc.html  DPT v5 - Event.dc.html  DPT v5 - Helhetsöversikt.dc.html  DPT v5 - Lag & Utövare.dc.html  DPT v5 - Mästerskap.dc.html  DPT v5 - Rörligt.dc.html  DPT v5 - Utövare.dc.html  DPT v5.dc.html  HANDOFF-00-Helhet.md  HANDOFF-D13-kärnskärmar-ny-ton.md  HANDOFF.md  Matchpubliceringspanel.dc.html  Skisser - Eventmodell.dc.html  Snabbplock.dc.html  Webb v5 - Eventsida.dc.html  designunderlag-eventmodell-backlog-2026-07-17.md
design/design_handoff_flode_sportprofiler/: Dalecarlia Photo Tools.dc.html  Lagbricka.dc.html  README.md
design/design_handoff_full/: DATAMODELL.md  Dalecarlia Photo Tools.dc.html  README.md
design/design_handoff_gren_markor/: Dalecarlia Photo Tools.dc.html  README.md
design/design_handoff_impl_synk/: HANDOFF.md  README.md
design/design_handoff_innehall_synk/: Combobox.dc.html  Dalecarlia Photo Tools.dc.html  README.md
scripts/: skrivbordsapp.sh
src/cull/: ai_lager.py  bas.py  gui.py  (+15 more)
(+230 files in other folders)
