[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cull"
version = "2.1.0"
description = "Dalecarlia Photo Cull — AI-driven culling av sportfoton (NEF)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python",
    "numpy",
    "Pillow",
    "anthropic",
    "pyobjc-framework-Vision",
    "pyobjc-framework-Quartz",
    "pywebview",
]

[project.optional-dependencies]
ai = [
    "ultralytics>=8.0",
    "mediapipe>=0.10",
]
ocr = [
    "easyocr",
]
estetik = [
    "pyiqa",
]
inlarning = [
    "scikit-learn",
    "pyiqa",
]

[project.scripts]
cull = "cull.core:_main_safe"
cull-gui = "cull.gui:main"
cull-web = "cull.gui_web:main"
cull-lar = "cull.inlarning:main"
cull-nummer = "cull.nummer_pass:main"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cull"]
artifacts = ["src/cull/assets/*.png", "src/cull/_buildstamp.py"]
