[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dpt"
version = "2.1.0"
description = "Dalecarlia Photo Tools — AI-driven culling av sportfoton (NEF)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python",
    "numpy",
    "Pillow",
    "anthropic",
    "pyobjc-framework-Vision",
    "pyobjc-framework-Quartz",
    "pywebview",
]

[project.optional-dependencies]
ai = [
    "ultralytics>=8.0",
    "mediapipe>=0.10",
]
ocr = [
    "easyocr",
]
estetik = [
    "pyiqa",
]
inlarning = [
    "scikit-learn",
    "pyiqa",
]

[project.scripts]
dpt     = "dpt.core:_main_safe"
dpt-gui = "dpt.gui:main"
dpt-web = "dpt.gui_web:main"
dpt-lar = "dpt.inlarning:main"
dpt-nummer = "dpt.nummer_pass:main"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dpt"]
artifacts = ["src/dpt/assets/*.png", "src/dpt/_buildstamp.py"]
