[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dpt"
version = "2.1.0"
description = "Dalecarlia Photo Tools — AI-driven culling av sportfoton (NEF)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # <5: OpenCV 5.0 tog bort Haar-CascadeClassifier som ögon/ansikts-
    # poängen i bas.py bygger på (gallra kraschar med AttributeError).
    "opencv-python>=4,<5",
    "numpy",
    "Pillow",
    "anthropic",
    "pyobjc-framework-Vision",
    "pyobjc-framework-Quartz",
    "pywebview",
    "httpx",
    # V5 §8: arrangörens tidsprogram är en PDF med kolumnlayout — texten måste
    # läsas med koordinater, annars flätas dagarna ihop (se program_import).
    "pdfplumber",
]

[project.optional-dependencies]
ai = [
    "ultralytics>=8.0",
    "mediapipe>=0.10",
]
ocr = [
    "easyocr",
]
estetik = [
    "pyiqa",
]
inlarning = [
    "scikit-learn",
    "pyiqa",
]

[project.scripts]
dpt     = "dpt.core:_main_safe"
dpt-gui = "dpt.gui:main"
dpt-web = "dpt.gui_web:main"
dpt-lar = "dpt.inlarning:main"
dpt-nummer = "dpt.nummer_pass:main"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dpt"]
artifacts = ["src/dpt/assets/*.png", "src/dpt/_buildstamp.py"]
